# state-changer

./: Cargo.toml  README.md
runtime/: Cargo.toml
runtime/src/: integers.rs  lib.rs  sequence_generator.rs  wrapper.rs
runtime/wasm/: Cargo.toml  build.sh
runtime/wasm/src/: lib.rs
src/: chain_spec.rs  main.rs  service.rs
