[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'state-changer-runtime-wasm'
version = '1.0.0'

[lib]
crate-type = ['cdylib']
[dependencies.state-changer-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['state-changer-runtime/std']
[profile.release]
lto = true
panic = 'abort'

[workspace]
members = []
